--- a/api.cabal
+++ b/api.cabal
@@ -28,10 +28,26 @@ source-repository head
 library
   hs-source-dirs:
       src
+  default-extensions:
+        OverloadedStrings
+       , NoImplicitPrelude
+       , ScopedTypeVariables
+       , FlexibleContexts
+       , FlexibleInstances
+       , MultiParamTypeClasses
+       , RecordWildCards
+       , NamedFieldPuns
+       , DeriveGeneric
+       , DuplicateRecordFields
+       , TypeOperators
+       , DataKinds
   build-depends:
-      base >=4.7 && <5
+        base >=4.7 && <5
+      , protolude
+      , text
   exposed-modules:
-      Lib
+       Lib
+      ,AppPrelude
   other-modules:
       Paths_api
   default-language: Haskell2010
