--- a/api.cabal
+++ b/api.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 1e1c60001aeba610cbdf459265c7d1220cf36bea80d30d976b57337f27ed999e
+-- hash: a1dd12c1de09904b2f6e0209900331de32381b2efcfe750ffe8135c65c798794
 
 name:           api
 version:        0.1.0.0
@@ -28,26 +28,13 @@ source-repository head
 library
   hs-source-dirs:
       src
-  default-extensions:
-        OverloadedStrings
-       , NoImplicitPrelude
-       , ScopedTypeVariables
-       , FlexibleContexts
-       , FlexibleInstances
-       , MultiParamTypeClasses
-       , RecordWildCards
-       , NamedFieldPuns
-       , DeriveGeneric
-       , DuplicateRecordFields
-       , TypeOperators
-       , DataKinds
   build-depends:
-        base >=4.7 && <5
-      , protolude
-      , text
+      base >=4.7 && <5
+    , protolude
+    , text
   exposed-modules:
-       Lib
-      ,AppPrelude
+      AppPrelude
+      Lib
   other-modules:
       Paths_api
   default-language: Haskell2010
@@ -60,6 +47,8 @@ executable api-exe
   build-depends:
       api
     , base >=4.7 && <5
+    , protolude
+    , text
   other-modules:
       Paths_api
   default-language: Haskell2010
@@ -73,6 +62,8 @@ test-suite api-test
   build-depends:
       api
     , base >=4.7 && <5
+    , protolude
+    , text
   other-modules:
       Paths_api
   default-language: Haskell2010
