--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,8 @@ description:         Please see the README on Github at <https://github.com/smac
 
 dependencies:
 - base >= 4.7 && < 5
+- protolude
+- text
 
 library:
   source-dirs: src
