--- a/api.cabal
+++ b/api.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: a1dd12c1de09904b2f6e0209900331de32381b2efcfe750ffe8135c65c798794
+-- hash: fdb5d0382abde26294e6a7adfc8fe2dc256d5cdbeeed60a1ba476ad0c8f4fbf7
 
 name:           api
 version:        0.1.0.0
@@ -29,9 +29,15 @@ library
   hs-source-dirs:
       src
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , attoparsec
+    , base >=4.7 && <5
+    , http-media
+    , http-types
+    , mmorph
     , protolude
     , text
+    , word8
   exposed-modules:
       AppPrelude
       Lib
@@ -45,10 +51,16 @@ executable api-exe
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      api
+      aeson
+    , api
+    , attoparsec
     , base >=4.7 && <5
+    , http-media
+    , http-types
+    , mmorph
     , protolude
     , text
+    , word8
   other-modules:
       Paths_api
   default-language: Haskell2010
@@ -60,10 +72,16 @@ test-suite api-test
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      api
+      aeson
+    , api
+    , attoparsec
     , base >=4.7 && <5
+    , http-media
+    , http-types
+    , mmorph
     , protolude
     , text
+    , word8
   other-modules:
       Paths_api
   default-language: Haskell2010
