--- a/stack.yaml
+++ b/stack.yaml
@@ -37,9 +37,10 @@ resolver: lts-8.23
 # will not be run. This is useful for tweaking upstream packages.
 packages:
 - .
-# Dependency packages to be pulled from upstream that are not in the resolver
-# (e.g., acme-missiles-0.3)
-# extra-deps: []
+
+extra-deps:
+- servant-0.13
+- servant-server-0.13
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
