--- a/stack.yaml
+++ b/stack.yaml
@@ -20,14 +20,15 @@ resolver: lts-8.23
 # User packages to be built.
 # Various formats can be used as shown in the example below.
 #
-# packages:
+packages:
+   extra-dep: true
 # - some-directory
 # - https://example.com/foo/bar/baz-0.0.2.tar.gz
 # - location:
 #    git: https://github.com/commercialhaskell/stack.git
 #    commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 # - location: https://github.com/commercialhaskell/stack/commit/e7b331f14bcffb8367cd58fbfc8b40ec7642100a
-#   extra-dep: true
+
 #  subdirs:
 #  - auto-update
 #  - wai
@@ -39,14 +40,13 @@ packages:
 - .
 
 extra-deps:
-- servant-0.13
-- servant-server-0.13
+- servant-0.11
+- servant-server-0.11
 
-# Override default flag values for local packages and extra-deps
-# flags: {}
 
-# Extra package databases containing global packages
-# extra-package-dbs: []
+flags: {}
+
+extra-package-dbs: []
 
 # Control whether we use the GHC we find on the path
 # system-ghc: true
