--- a/package.yaml
+++ b/package.yaml
@@ -35,8 +35,7 @@ default-extensions:
 
 dependencies:
 - base >= 4.7 && < 5
-- foundation
-- foundation-edge
+- protolude
 - text
 - aeson
 - attoparsec
