--- a/api.cabal
+++ b/api.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: e86fa25a67be8eda56102000ea11d1567b7d98814d9c1e33fe388465cdebe820
+-- hash: e184733ff2b56f972d8a509b7ed7f9cf2b7f3787fb78d33018cc32790911f986
 
 name:           api
 version:        0.1.0.0
@@ -52,6 +52,7 @@ library
   exposed-modules:
       Api.User
       App
+      AppConfig
       AppPrelude
       Config.AppConfig
       Config.SeldaConfig
