--- a/stack.yaml
+++ b/stack.yaml
@@ -23,6 +23,7 @@ extra-deps:
 - foundation-edge-0.0.3
 - servant-auth-0.3.1.0
 - servant-auth-server-0.3.2.0
+- servant-auth-swagger-0.2.9.0
 
 flags: {}
 
