--- a/api.cabal
+++ b/api.cabal
@@ -40,6 +40,7 @@ library
     , data-default
     , fast-logger
     , jose
+    , lens
     , mtl
     , natural-transformation
     , postgresql-simple
