--- a/api.cabal
+++ b/api.cabal
@@ -71,9 +71,10 @@ library
       AppPrelude
       Config.AppConfig
       Lib
-      DB.Transaction
-      Models.User
-      DBSchema
+      Models.Login
+      Database.Transaction
+      Database.Tables.User
+      Database.Schema
   other-modules:
       Paths_api
   default-language: Haskell2010
