Started newtyping most of the credentials

--- a/api.cabal
+++ b/api.cabal
@@ -72,6 +72,8 @@ library
       Config.AppConfig
       Lib
       Models.Login
+      Models.User
+      Models.Credentials
       Database.Transaction
       Database.Tables.User
       Database.Schema
