--- a/api.cabal
+++ b/api.cabal
@@ -70,6 +70,7 @@ library
       App
       AppPrelude
       Config.AppConfig
+      Config.ServerConfig
       Lib
       Models.Login
       Models.User
