Split out db config

--- a/api.cabal
+++ b/api.cabal
@@ -71,6 +71,7 @@ library
       AppPrelude
       Config.AppConfig
       Config.ServerConfig
+      Config.DBConfig
       Lib
       Models.Login
       Models.User
