--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,21 @@ jobs:
     docker:
       - image: fpco/stack-build:lts-9.4
 
+
+    - setup_remote_docker:   # (2)
+          docker_layer_caching: true # (3)
+
+      # use a primary image that already has Docker (recommended)
+      # or install it during a build like we do here
+      - run:
+          name: Install Docker client
+          command: |
+            set -x
+            VER="17.03.0-ce"
+            curl -L -o /tmp/docker-$VER.tgz https://download.docker.com/linux/static/stable/x86_64/docker-$VER.tgz
+            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+            mv /tmp/docker/* /usr/bin
+
     steps:
       - restore_cache:
           key: stack-cache
