--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
           name: deploy
           no_output_timeout: 120m
           command: |
-            ./deploy-staging.sh $CIRCLE_SHA1
+            ./deploy.sh $CIRCLE_SHA1
 
 
 
