--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,11 +9,19 @@ jobs:
       - checkout
 
       - run:
+          name: install docker
+          command: |
+            set -x
+            VER="17.03.0-ce"
+            curl -L -o /tmp/docker-$VER.tgz https://get.docker.com/builds/Linux/x86_64/docker-$VER.tgz
+            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+            mv /tmp/docker/* /usr/bin
+
+      - run:
           name: deploy
           no_output_timeout: 120m
           command: |
-            docker build --rm=false - t "$DOCKER_DIR" -f Dockerfile .
-            docker push  "$DOCKER_DIR"
+            ./deploy.sh $CIRCLE_SHA1
 
 
 
