--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,14 +8,6 @@ jobs:
     steps:
       - checkout
 
-      - run:
-          name: install hasm
-          command: |
-            git clone git@github.com:smaccoun/create-haskstar-app.git
-            cd create-haskstar-app
-            ./install.sh
-
-
       - setup_remote_docker:
           docker_layer_caching: true
 
@@ -28,13 +20,37 @@ jobs:
             tar -xz -C /tmp -f /tmp/docker-$VER.tgz
             mv /tmp/docker/* /usr/bin
 
+      - run:
+          name: install_pip
+          command: |
+            sudo apt-get update
+            sudo apt-get -y install python-pip
+            sudo apt-get install python-dev
+            pip install --upgrade botocore
+
+      - run:
+          name: install_awscli
+          command: sudo apt-get -y install awscli
+
+      - run:
+          name: install_awsebcli
+          command: pip install --upgrade --user awsebcli
+
+      - run:
+          name: install hasm
+          command: |
+            git clone git@github.com:smaccoun/create-haskstar-app.git
+            cd create-haskstar-app
+            ./install.sh
+            rm -rf create-haskstar-app
+            cd ../
+
 
       - run:
           name: deploy
           no_output_timeout: 120m
           command: |
-            hasm deploy staging --SHA1 $CIRCLE_SHA1 --remoteDockerDir smaccoun/hasm-haskell
-
+            ($(aws ecr get-login --region us-west-1) && hasm deploy staging --SHA1 smaccoun/hasm-haskell)
 
 
 
