--- a/DockerfileBuild
+++ b/DockerfileBuild
@@ -1,6 +1,8 @@
-FROM fpco/stack-build:lts-9.4
+FROM fpco/stack-build:lts-11.2
  
 VOLUME /root/.local/bin
+
+RUN export PATH=$(stack path --local-bin):$PATH
  
 RUN mkdir -p /app/user
 WORKDIR /app/user
