--- a/api.cabal
+++ b/api.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 5d7cb424c75ada15ab84f75b541f75ec24df9632a8110e67eaa830165ab83030
+-- hash: ac8b062be2ac7a6901e4410ffa0ac1ab38e620fee9f006bb1d4e419628ae9a96
 
 name:           api
 version:        0.1.0.0
@@ -151,7 +151,8 @@ test-suite api-test
   default-extensions: OverloadedStrings NoImplicitPrelude ScopedTypeVariables FlexibleContexts FlexibleInstances MultiParamTypeClasses RecordWildCards NamedFieldPuns DeriveGeneric DuplicateRecordFields TypeOperators DataKinds
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      aeson
+      QuickCheck
+    , aeson
     , api
     , attoparsec
     , base >=4.7 && <5
@@ -161,6 +162,7 @@ test-suite api-test
     , bytestring
     , data-default
     , fast-logger
+    , hspec
     , http-api-data
     , jose
     , lens
