Fix postgres test env setup

--- a/.env.test
+++ b/.env.test
@@ -1,6 +1,7 @@
 DB_HOST=localhost
-DB_PORT=6543
-DB_DATABASE=smaccoun_homepage
+DB_PORT=7543
+DB_DATABASE=test_db
+POSTGRES_DB=test_db
 DB_SCHEMA=public
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
