Sleep test docker db to give it time to load

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,9 +50,20 @@ jobs:
             - ./.stack-work
 
       - run:
+          name: setup test db
+          command: |
+            docker stop test-db && docker rm test-db
+
+            docker run --name test-db  -p 7543:5432 -h 127.0.0.1  --env-file .env.test.setup -d postgres
+
+            docker inspect test-db
+
+            sleep 10
+
+      - run:
           name: run tests
           command: |
-            ./run-test.sh
+            (env $(cat .env.test | xargs) stack test )
 
 
 workflows:
